cmake_minimum_required(VERSION 3.20)
project(ex02)

set(CMAKE_CXX_STANDARD 98)

add_executable(ex02 main.cpp Form.cpp Form.hpp Bureaucrat.cpp
        Bureaucrat.hpp ShrubberyCreationForm.cpp
        ShrubberyCreationForm.hpp
        RobotomyRequestForm.cpp RobotomyRequestForm.hpp
        PresidentialPardonForm.cpp PresidentialPardonForm.hpp)

